# qrooper

./: .gitignore  README.md  pyproject.toml  test_engine.py  test_qrooper.py
src/qrooper/: __init__.py  prompts.py  qrooper_engine.py  schemas.py
src/qrooper/agents/: __init__.py  context_manager.py  decider.py  deep_analysis.py  llm_calls.py  pattern_recognition.py  reconnaissance.py
src/qrooper/tools/: __init__.py  ast_parsing.py  filesystem_utils.py
