[project]
name = "qrooper"
version = "0.1.0"
description = "Code analysis and AST parsing engine for repository understanding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "pydantic>=2.5.0",
    "requests>=2.32.0",
    "ripgrepy>=2.2.0",
    "ruff>=0.13.0",
    "tree-sitter>=0.25.2",
    "typing-extensions>=4.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
